k8s/local/admin-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      containers:
        - name: admin-portal
          image: admin-portal
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: admin-portal
