k8s/local/caddy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: caddy:2.7.6-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: config-volume
          configMap:
            name: caddy-config
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: caddy
