k8s/local/client-demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-demo-app
  template:
    metadata:
      labels:
        app: client-demo-app
    spec:
      containers:
        - name: client-demo-app
          image: client-demo-app
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: client-demo-app
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: client-demo-app
