k8s/local/flag-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: flag-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: flag-service
