k8s/local/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-isolation-policy
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["dynamodb-local", "redis-local"]
  policyTypes:
    - Ingress
  ingress:
    # Only allow traffic originating from flag-service pods
    - from:
        - podSelector:
            matchLabels:
              app: flag-service
      ports:
        - protocol: TCP
          port: 8000 # DynamoDB
        - protocol: TCP
          port: 6379 # Redis
